image responsiveness, alignment fixes, slider fix

--- a/sass/components/review-card.scss
+++ b/sass/components/review-card.scss
@@ -37,6 +37,12 @@
     display: flex;
     justify-content: space-between;
 
+    @media only screen and (max-width: 450px) {
+      flex-direction: column;
+      align-items: center;
+      gap: 20px;
+    }
+
     &__info {
       display: flex;
       gap: 16px;
